# modelarr

./: .dockerignore  .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  Dockerfile  LICENSE  PROJECT_BRIEF.md  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: modelarr-verifier.md
.github/workflows/: ci.yml
scripts/: capture_screenshots.py
src/modelarr/: __init__.py  __main__.py  cli.py  db.py  downloader.py  hf_client.py  matcher.py  models.py  monitor.py  notifier.py  ollama.py  storage.py  store.py
src/modelarr/web/: __init__.py  app.py  deps.py
src/modelarr/web/routes/: __init__.py  compare.py  dashboard.py  downloads.py  library.py  search.py  settings.py  watchlist.py
src/modelarr/web/static/: style.css
src/modelarr/web/templates/: 404.html  500.html  base.html  compare.html  dashboard.html  downloads.html  library.html  search.html  settings.html  watchlist.html
src/modelarr/web/templates/partials/: active_downloads.html  download_row.html  model_detail.html  model_row.html  search_results.html  toast.html  (+1 more)
tests/: __init__.py  test_cli.py  test_cli_init.py  test_cli_library.py  test_cli_monitor.py  test_cli_ollama.py  test_cli_serve.py  test_cli_watch.py  test_db.py  test_digest.py  test_downloader.py  test_hf_client.py  test_matcher.py  test_models.py  test_monitor.py  test_notifier.py  test_ollama.py  test_storage.py  test_store.py  test_web_app.py  test_web_compare.py  test_web_coverage.py  test_web_dashboard.py  test_web_downloads.py  test_web_library.py  test_web_ollama.py  test_web_search.py  test_web_settings.py  test_web_watchlist.py
